# ferrox

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  SECURITY.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  coverage.yml  docker.yml  security.yml
crates/ferrox/: Cargo.toml  build.rs
crates/ferrox-server/: Cargo.toml  build.rs
crates/ferrox-server/src/: convert.rs  main.rs  service.rs
crates/ferrox/src/: error.rs  lib.rs  serde_util.rs
crates/ferrox/src/cp/: mod.rs  problem.rs  suggestor.rs
crates/ferrox/src/formation/: mod.rs  suggestor.rs
crates/ferrox/src/jobshop/: cpsat.rs  greedy.rs  mod.rs  problem.rs
crates/ferrox/src/lp/: mod.rs  problem.rs  suggestor.rs
crates/ferrox/src/mip/: mod.rs  problem.rs  suggestor.rs
crates/ferrox/src/scheduling/: cpsat.rs  greedy.rs  mod.rs  problem.rs
crates/ferrox/src/vrptw/: cpsat.rs  greedy.rs  mod.rs  problem.rs
crates/highs-sys/: Cargo.toml  build.rs  highs_wrapper.cc  highs_wrapper.h
crates/highs-sys/src/: lib.rs
crates/ortools-sys/: Cargo.toml  build.rs  wrapper.cc  wrapper.h
crates/ortools-sys/src/: lib.rs
examples/cp_sudoku/: Cargo.toml
examples/cp_sudoku/src/: main.rs
examples/highs_mip/: Cargo.toml
examples/highs_mip/src/: main.rs
examples/jspbench/: Cargo.toml
examples/jspbench/src/: main.rs
examples/maatw/: Cargo.toml
examples/maatw/src/: main.rs
examples/vrptw/: Cargo.toml
examples/vrptw/src/: main.rs
experiments/: EXP-001.md  LOG.md
proto/: ferrox.proto
