[package]
name = "ferrox-highs-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings to the HiGHS MIP/LP solver"
keywords    = ["highs", "mip", "linear-programming", "optimization", "ffi"]
categories  = ["external-ffi-bindings", "algorithms"]
build = "build.rs"
links = "highs"

[features]
default = []
link = []

[dependencies]

[build-dependencies]
cc = "1"

[lints.rust]
unsafe_code = "allow"
# sys crate: unsafe is the intentional boundary

[lints.clippy]
pedantic               = { level = "warn", priority = -1 }
must_use_candidate     = "allow"
missing_errors_doc     = "allow"
missing_panics_doc     = "allow"
