[package]
name = "ferrox-ortools-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings to Google OR-Tools CP-SAT and GLOP solvers"
build = "build.rs"
links = "ortools"

[features]
default = []
link = []

[dependencies]

[build-dependencies]
cc = "1"

[lints.rust]
unsafe_code = "allow"
# sys crate: unsafe is the intentional boundary

[lints.clippy]
pedantic               = { level = "warn", priority = -1 }
must_use_candidate     = "allow"
missing_errors_doc     = "allow"
missing_panics_doc     = "allow"
