[workspace]

[package]
name = "highs-mip"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "highs_mip"
path = "src/main.rs"

[dependencies]
ferrox        = { path = "../../crates/ferrox" }
converge-core = { path = "../../../../converge/crates/core", version = "3.7.1" }
converge-pack = { path = "../../../../converge/crates/pack", version = "3.7.1" }
serde_json    = "1"
tokio         = { version = "1", features = ["macros", "rt-multi-thread"] }
